<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/but_quit"
                tools:text="@string/but_quit" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/but_main_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_addItem" />

            <Button
                android:id="@+id/but_main_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_view" />

            <Button
                android:id="@+id/but_main_stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_stat" />

            <Button
                android:id="@+id/but_main_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/but_health" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>