<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_write_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but__write_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/but__write_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_write_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@id/rad_write_expenditure"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/rad_write_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收入"
                android:visibility="visible"
                tools:visibility="visible" />

            <RadioButton
                android:id="@+id/rad_write_expenditure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="支出" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_write_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_write_selectTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_tag" />

        <TextView
            android:id="@+id/tex_write_currentTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tag" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_write_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edi_write_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="请输入金额"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tex_write_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="金额：" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_write_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edi_write_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="请输入账目详情"
            android:inputType="textPersonName"
            android:singleLine="false" />

        <TextView
            android:id="@+id/tex_writeDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="账目详情" />

    </LinearLayout>
</LinearLayout>